--- a/portfolio/assignment/README
+++ b/portfolio/assignment/README
@@ -1,1 +1,1 @@
-This is my portfolio web page. Use xampp server to load this web page. Download all the files and go to xampp folder. There is folder called htdocs.. Create new folder as Portfolio and put all the files inside that folder. And there is a sql file called 'portfolio' with this files.
+This is my portfolio web page. Use xampp server to load this web page. Download all the files and go to xampp folder. There is folder called htdocs.. Create new folder as portfolio and put all the files inside that folder. And there is a sql file called 'portfolio' with this files.
